Fixed the search bar so it has a fixed position and overlaps rest of the page.

--- a/Interaktiva20_4/wwwroot/css/stylefolder.css
+++ b/Interaktiva20_4/wwwroot/css/stylefolder.css
@@ -19,7 +19,7 @@
     font-size: 16px; /* Increase font-size */
     padding: 12px 20px 12px 40px; /* Add some padding */
     border: 1px solid #ddd; /* Add a grey border */
-    margin-bottom: 12px; /* Add some space below the input */
+    margin-bottom: 0px !important; /* Add some space below the input */
 }
 
 #myUL {
@@ -29,17 +29,44 @@
     margin: 0;
 }
 
-    #myUL li a {
-        border: 1px solid #ddd; /* Add a border to all links */
-        margin-top: -1px; /* Prevent double borders */
-        background-color: #f6f6f6; /* Grey background color */
-        padding: 12px; /* Add some padding */
-        text-decoration: none; /* Remove default text underline */
-        font-size: 18px; /* Increase the font-size */
-        color: black; /* Add a black text color */
-        display: block; /* Make it into a block element to fill the whole list */
-    }
+#myUL li a {
+    border: 1px solid #ddd; /* Add a border to all links */
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6; /* Grey background color */
+    padding: 12px; /* Add some padding */
+    text-decoration: none; /* Remove default text underline */
+    font-size: 18px; /* Increase the font-size */
+    color: black; /* Add a black text color */
+    display: block; /* Make it into a block element to fill the whole list */
+}
 
-        #myUL li a:hover:not(.header) {
-            background-color: #eee; /* Add a hover effect to all links, except for headers */
-        }
+#myUL li a:hover:not(.header) {
+    background-color: #eee; /* Add a hover effect to all links, except for headers */
+}
+
+#header_body_fixed {
+
+    width: 100%;
+    top: 0;
+    z-index: 100;
+    outline: none;
+}
+
+#fixed {
+    display: block;
+    position: absolute;
+    min-width: 100%;
+    padding-right: -15px;
+    text-align: left !important;
+}
+
+#noPaddingID {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+     
+}
+
+
+
+
+
